--- a/webUserServer/package.json
+++ b/webUserServer/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "@types/node": "^11.9.3"
+    "@types/node": "^11.9.3",
+    "ws": "^6.1.4"
   }
 }
