--- a/webUserServer/package.json
+++ b/webUserServer/package.json
@@ -18,12 +18,15 @@
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
     "babel-loader": "^8.0.5",
+    "chai": "^4.2.0",
     "css-loader": "^2.1.0",
+    "expect.js": "^0.3.1",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.1",
     "mini-css-extract-plugin": "^0.5.0",
+    "mocha": "^6.0.0",
     "node-sass": "^4.11.0",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
