--- a/webreact/package.json
+++ b/webreact/package.json
@@ -26,6 +26,7 @@
     "postcss-preset-env": "^6.5.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-hot-loader": "^4.7.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
